Добавлены кнопки и комментарии,исправлены ошибки кода

--- a/project/forms/brif-form.html
+++ b/project/forms/brif-form.html
@@ -17,12 +17,16 @@
 			<a href="../index.html">
 				<img src="../img/3.jpg" alt="123"  title="Главная"> 
 			</a>
-		</div>		<nav>
-	   <ul>
-		   <a href="../index.html"><li>О Нас</li></a>
-		   <a href="services.html"><li>Услуги</li></a>
-		   <a href="contacts.html"><li>Контакты</li></a>
-	   </ul>
+			
+		</div>
+		<!--Навигация-->
+		<nav>	
+	   		<ul>
+		   		<a href="../index.html"><li>О Нас</li></a>
+		   		<a href="services.html"><li>Услуги</li></a>
+		   		<a href="contacts.html"><li>Контакты</li></a>
+	   		</ul>
+	   </nav>
 	   <div>
 		   <h2>Бриф: разработка веб-сайта</h2>
 	   </div>
@@ -63,6 +67,7 @@
                 <label><input type="checkbox" checked>Онлайн-сервис</label>
 				<label><input type="checkbox" checked>Промо-сайт</label>
 				<label><input type="checkbox" checked>Контент-сайт</label>
+				<input type="reset" value="Сброс">
 		   </fieldset>
 		<!--Чекбокс результатов сайта--> 
 		   	 <fieldset>
@@ -74,7 +79,8 @@
                 <label><input type="checkbox" checked>увеличение посещаемости, развитие проекта;</label>
 				<label><input type="checkbox" checked>продвижение конкретных продуктов и услуг;</label>
 				<label><input type="checkbox" checked>улучшение имиджа;</label>
-				<label><input type="checkbox" checked>продажи через интернет, приём платежей;</label>				
+				<label><input type="checkbox" checked>продажи через интернет, приём платежей;</label>	
+				<input type="reset" value="Сброс">			
 			</fieldset>
 		<!--Поля ввода примеров сайтов-->
 			<fieldset>
@@ -158,6 +164,11 @@
 				</label>
 			</div>
 		</fieldset>
+			<fieldset>	
+				<h3>Если вы готовы оформить заказ</h3>
+				<p>Просто нажмите кнопку</p>
+				<input type="submit" value="Готово! ">
+			</fieldset>
 	   </form>
-	</nav>
-	</header>
+	
+	
