--- a/project/forms/brif-form.html
+++ b/project/forms/brif-form.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Веб-студия</title>
+	<link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
 	<header>
@@ -64,9 +65,9 @@
 				Если сайт призван решать несколько задач,<br>
  				можно выбрать несколько пунктов одновременно.</p>
                 <label><input type="checkbox">Корпоративный сайт</label>
-                <label><input type="checkbox" checked>Онлайн-сервис</label>
-				<label><input type="checkbox" checked>Промо-сайт</label>
-				<label><input type="checkbox" checked>Контент-сайт</label>
+                <label><input type="checkbox">Онлайн-сервис</label>
+				<label><input type="checkbox">Промо-сайт</label>
+				<label><input type="checkbox">Контент-сайт</label>
 				<input type="reset" value="Сброс">
 		   </fieldset>
 		<!--Чекбокс результатов сайта--> 
@@ -76,10 +77,10 @@
 				  Пожалуйста, отметьте все пункты, которые имеют
 				   для вас значение.</p>
                 <label><input type="checkbox">Корпоративный сайт</label>
-                <label><input type="checkbox" checked>увеличение посещаемости, развитие проекта;</label>
-				<label><input type="checkbox" checked>продвижение конкретных продуктов и услуг;</label>
-				<label><input type="checkbox" checked>улучшение имиджа;</label>
-				<label><input type="checkbox" checked>продажи через интернет, приём платежей;</label>	
+                <label><input type="checkbox">увеличение посещаемости, развитие проекта;</label>
+				<label><input type="checkbox">продвижение конкретных продуктов и услуг;</label>
+				<label><input type="checkbox">улучшение имиджа;</label>
+				<label><input type="checkbox">продажи через интернет, приём платежей;</label>	
 				<input type="reset" value="Сброс">			
 			</fieldset>
 		<!--Поля ввода примеров сайтов-->
@@ -144,6 +145,7 @@
 			</fieldset>
 		<!--Данные клиента-->
 			<fieldset>
+
 			<h3>Наконец, введите Ваши данные</h3>
 			<p>Что бы мы могли с Вами связаться</p>
 			<div>
@@ -163,12 +165,14 @@
 					Ваш контактный телефон <input id="phoneFiled" type="text" placeholder="+7 *** ** **">
 				</label>
 			</div>
+
 		</fieldset>
-			<fieldset>	
+
+		<fieldset>	
 				<h3>Если вы готовы оформить заказ</h3>
 				<p>Просто нажмите кнопку</p>
 				<input type="submit" value="Готово! ">
-			</fieldset>
+		</fieldset>
 	   </form>
 	
 	
