--- a/project/index.html
+++ b/project/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Веб-студия</title>
+	<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 	<header>
@@ -21,7 +22,7 @@
 	</header>
 		<!--Навигация-->
 	<nav>
-	   <ul>
+	   <ul class="nav-ul">
 		   <a href="index.html"><li>О Нас</li></a>
 		   <a href="forms/brif-form.html"><li>Заказать сайт</li></a>
 		   <a href="pages/services.html"><li>Услуги</li></a>
@@ -60,7 +61,7 @@
 		<!--Переход к брифу-->
 		<form>
 		<a href="forms/brif-form.html">
-		<input type="button" value="Хочу сайт!">
+		<input class="brif-button" type="button" value="Хочу сайт!">
 		</a>
 		</form>
 		<!--Цитата-->		
