--- a/project/pages/contacts.html
+++ b/project/pages/contacts.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Веб-студия</title>
+	<link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
 	<header>
